fixed problem changes where "s needs to be replaced with 's

--- a/procedures/euro_s50_double_vanos_procedure.htm
+++ b/procedures/euro_s50_double_vanos_procedure.htm
@@ -51,9 +51,9 @@ div.WordSection1 {
   <p><b><span style='font-size:14.0pt'>Introduction</span></b><br>
     <br>
   </p>
-  <p>"Vanos" is BMW"s name for its variable valve timing units.
+  <p>"Vanos" is BMW's name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
-    (engine model). The vanos discussed here is BMW part # 11-36-1-404-701. It"s a double
+    (engine model). The vanos discussed here is BMW part # 11-36-1-404-701. It's a double
     vanos; meaning the intake and exhaust valve timing is varied. This vanos unit
     is part of BMW 6-cylinder engine Euro S50B32. This engine was incorporated into
     three car models, the 3-series Euro E36 M3 96-99, Euro Z3 M Coupe 98-00, and Euro
@@ -78,7 +78,7 @@ div.WordSection1 {
     but has much higher temperature and chemical resistance characteristics. But an
     even better solution is to replace the rod seal with a Teflon equivalent.
     Teflon (PTFE filled) has a much lower friction property and is more appropriate
-    for dynamic sealing than rubber. It"s compatible with the engine environment
+    for dynamic sealing than rubber. It's compatible with the engine environment
     and is a standard material for this rod cup seal design. An O-ring is inserted
     in the cup to provide energizing support for the Teflon. The O-ring is best
     made from Viton to handle the engine environment.<br>
