--- a/procedures/euro_s50_single_vanos_rattle_procedure.htm
+++ b/procedures/euro_s50_single_vanos_rattle_procedure.htm
@@ -37,9 +37,9 @@ style='font-size:14.0pt'><br>
   <p><b><span style='font-size:14.0pt'>Introduction</span><br>
     <br>
     </b></p>
-  <p>"Vanos" is BMW"s name for its variable valve timing units.
+  <p>"Vanos" is BMW's name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
-    (engine model). The vanos discussed here is BMW part # 11-31-1-402-428. It"s a single
+    (engine model). The vanos discussed here is BMW part # 11-31-1-402-428. It's a single
     vanos; meaning only the intake valve timing is varied. This vanos unit is part
     of BMW 6-cylinder engine Euro S50B30. This engine was incorporated into one car
     model, the 3-series Euro E36 M3 93-95.<br>
@@ -55,14 +55,14 @@ style='font-size:14.0pt'><br>
     found on the helical gears and the splined shaft bearing. Replacing the helical
     gear components is expensive and the gears will wear again and the rattle will
     return. Removing the splined shaft bearing axial play significantly reduces the
-    rattle to the point where it"s barely heard or not heard at all in the
+    rattle to the point where it's barely heard or not heard at all in the
     passenger compartment. Performance cams like the ones on this engine create
     stronger camshaft lash forces and thus are more susceptible to causing a
     rattle.<br>
     <br>
   </p>
   <p>Another component that addresses the rattle is the diaphragm
-    spring that"s incorporated in the intake sprocket. This spring loads the
+    spring that's incorporated in the intake sprocket. This spring loads the
     sprocket rotational movement to dampen the rattle quick movements.<br>
     Over time the diaphragm spring weakens and degrades in function. Replacing the
     diaphragm spring with a new one is often needed to fully resolve the rattle.<br>
@@ -80,7 +80,7 @@ style='font-size:14.0pt'><br>
     <br>
   </p>
   <p>The splined shaft bearing is made of a thick washer and two
-    thrust (roller) bearings. The washer incorporates a stud that"s mounted to the
+    thrust (roller) bearings. The washer incorporates a stud that's mounted to the
     vanos piston. The two thrust bearings sandwich the washer facilitating the splined
     shaft to rotate at camshaft speed without rotating the vanos piston. The washer
     and two thrust bearings are incased in a ring and two outer flat washers. The
@@ -90,16 +90,16 @@ style='font-size:14.0pt'><br>
   </p>
   <p>Removing the splined shaft bearing axial play requires
     modifying or replacing one or more bearing components. The thrust bearings are
-    a standard part and are manufactured to tight tolerances. It"s not feasible to
+    a standard part and are manufactured to tight tolerances. It's not feasible to
     modify or replace them. The center washer is also manufactured to a tight
     tolerance. The ring is a non-standard part and is manufactured to loose
-    tolerance. It"s also made of standard steel that is annealed (soft). This is
+    tolerance. It's also made of standard steel that is annealed (soft). This is
     causing it to be scored by the center washer and thrust bearings. The outer flat
     washers reside inside the ring and thus influence the bearing axial fit. The
     washers are a standard bearing part, but due to their stamped manufacturing
     have a notable tolerance range which can significantly affect the bearing axial
     fit.<br>
-    The ring can be replaced with a ring made of bearing steel that"s hardened and
+    The ring can be replaced with a ring made of bearing steel that's hardened and
     ground to bearing standards. Its height can be tightly controlled to provide a
     tight bearing axial fit. Standard bearing washers that have been measured and
     sorted can be combined to provide the needed height to provide a tight bearing
