--- a/procedures/front_struts_procedure.htm
+++ b/procedures/front_struts_procedure.htm
@@ -67,7 +67,7 @@ p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
   </p>
   <p>There is no practical DIY diagnosis for struts/shocks.
     Paying attention to the symptoms is sufficient to characterizing the failure.
-    If one end of the car is presenting with failure symptoms, then it"s likely the
+    If one end of the car is presenting with failure symptoms, then it's likely the
     other end is not far behind.<br>
     <br>
   </p>
@@ -150,7 +150,7 @@ src="front_struts_procedure_files/image005.jpg"><br>
   </p>
   <p>The following procedure shows the left side (driver side).
     The right side is the same but with minor noted differences.<br>
-    It"s more effective to perform the left side first since it"s illustrated with
+    It's more effective to perform the left side first since it's illustrated with
     pictures.</p>
   <p><u><span style='font-size:14.0pt'>Removal of spring/strut
     from car</span></u></p>
@@ -213,7 +213,7 @@ src="front_struts_procedure_files/image012.jpg"><br>
     Tighten leverage spindle to press tie-rod bolt out of wheel carrier shelf (24mm
     combo wrench). There will be a "big bang" when bolt releases, and tools will
     drop to ground. Be careful!!<br>
-    Note: It"s helpful to protect ears from shock (ear plugs).<br>
+    Note: It's helpful to protect ears from shock (ear plugs).<br>
     <br>
   </p>
   <p>8-cyl: Turn steering wheel to opposite side to facilitate
@@ -322,7 +322,7 @@ src="front_struts_procedure_files/image022.jpg"><br>
     <br>
     <br>
   </p>
-  <p>It"s now important to take close note of the positioning of
+  <p>It's now important to take close note of the positioning of
     the spring in the strut assy. Understanding this will be essential for proper
     reassembly. The spring lower coil is molded to fit the lower seat (strut perch)
     egg shape and is positioned on the lower seat to fit that outline. The position
@@ -334,7 +334,7 @@ src="front_struts_procedure_files/image022.jpg"><br>
     nose tip to provide an orientation reference for reinstallation (paint).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image023.jpg"><br>
-    Note: It"s best to have strut horizontal when performing press process (floor
+    Note: It's best to have strut horizontal when performing press process (floor
     pad).<br>
     Tighten spindles (3/4" socket 1/2" / 1/2" ratchet), rotating often between
     spindles. Maintaining proportional spindle clasp to clasp lengths is essential
@@ -394,7 +394,7 @@ src="front_struts_procedure_files/image025.jpg"><br>
     standing on end (floor pad).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image026.jpg"><br>
-    Note: It"s important to have strut standing on end when initially uncompressing
+    Note: It's important to have strut standing on end when initially uncompressing
     spring presses to insure proper positioning of components (floor pad).<br>
     Unscrew spring presses, rotating often between spindles (3/4" socket 1/2" / 1/2"
     ratchet | 3/4" combo wrench). Maintaining proportional spindle clasp to clasp
@@ -403,7 +403,7 @@ src="front_struts_procedure_files/image026.jpg"><br>
     Watch component positioning and adjust as needed (dead blow hammer).<br>
     <br>
   </p>
-  <p>Once spring has seated well, it"s best to complete uncompressing
+  <p>Once spring has seated well, it's best to complete uncompressing
     process while strut is horizontal (floor pad). Rotate often and be careful not
     to jar spring presses. Watch component positioning and adjust as needed (dead
     blow hammer).<br>
