--- a/procedures/m62tu_vanos_procedure.htm
+++ b/procedures/m62tu_vanos_procedure.htm
@@ -51,12 +51,12 @@ div.WordSection1 {
   <p><b><span style='font-size:14.0pt'>Introduction</span></b><br>
     <br>
   </p>
-  <p>"Vanos" is BMW"s name for its variable valve timing units.
+  <p>"Vanos" is BMW's name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
-    (engine model). The vanos discussed here is BMW part # 11-36-1-438-694. It"s a
+    (engine model). The vanos discussed here is BMW part # 11-36-1-438-694. It's a
     single vanos, meaning only the intake valve timing is varied. This vanos unit
     is part of BMW 8-cylinder engine M62TU. This engine was incorporated in
-    multiple car models during years 1999-2005. It"s found in the 5-series E39
+    multiple car models during years 1999-2005. It's found in the 5-series E39
     99-03, 7-series E38 99-01, X5 E53 99-03, Land Rover 03-05, Range Rover 03-05.<br>
     <br>
   </p>
@@ -185,7 +185,7 @@ div.WordSection1 {
   <p><img border=0 width=512 height=384
 src="m62tu_vanos_procedure_files/image001.jpg"><br>
     The vanos incorporates the intake camshaft sprockets.<br>
-    Internally it"s a cylinder with polished wall and a center cylinder shaft with
+    Internally it's a cylinder with polished wall and a center cylinder shaft with
     helical gears on the outer diameter and polished wall on the inner diameter.<br>
     Holes in the cylinder shaft provide an oil path to the vanos rear oil chamber.<br>
     A shelf on the cylinder inner wall provides a stop/seating position for the
@@ -342,7 +342,7 @@ src="m62tu_vanos_procedure_files/image017.jpg"><br>
     <br>
     A Baum Tools water pump pulley holder or holder and 32mm wrench combo can be
     purchased from El Paso Tool store.<br>
-    Go to El Paso Tool store and perform a "Store search" for "115050". Check the
+    Go to El Paso Tool store and perform a "store search" for "115050". Check the
     "in titles &amp; description" check box.<br>
     <a href="http://stores.shop.ebay.com/EL-PASO-TOOL-EUROPEAN-AUTO-TOOLS">El Paso
     Tool store</a></p>
