--- a/procedures/rear_shocks_procedure.htm
+++ b/procedures/rear_shocks_procedure.htm
@@ -65,7 +65,7 @@
   </p>
   <p>There is no practical diy diagnosis for struts/shocks.
     Paying attention to the symptoms is sufficient to characterizing the failure.
-    If one end of the car is presenting with failure symptoms, then it"s likely the
+    If one end of the car is presenting with failure symptoms, then it's likely the
     other end is not far behind.<br>
     <br>
   </p>
@@ -236,7 +236,7 @@ src="rear_shocks_procedure_files/image019.jpg"><br>
   </p>
   <p>The following procedure shows the left side (driver side).
     The right side is the same but with minor noted differences.<br>
-    It"s more effective to perform the left side first since it"s illustrated with
+    It's more effective to perform the left side first since it's illustrated with
     pictures.</p>
   <p><img width=512 height=384
 src="rear_shocks_procedure_files/image020.jpg"><br>
@@ -335,7 +335,7 @@ src="rear_shocks_procedure_files/image029.jpg"><br>
     Spring presses should be on opposite sides of spring.</p>
   <p><img width=512 height=384
 src="rear_shocks_procedure_files/image030.jpg"><br>
-    Note: It"s best to have shock horizontal when performing press process (floor
+    Note: It's best to have shock horizontal when performing press process (floor
     pad or lap).<br>
     Tighten spindles (3/4" socket 1/2" / 1/2" ratchet | 3/4" combo wrench),
     rotating often between spindles. Maintaining proportional spindle clasp to
@@ -408,7 +408,7 @@ src="rear_shocks_procedure_files/image032.jpg"><br>
     Fully tighten, 27 Nm (20 ft-lb) (vice grips, 16mm combo wrench).</p>
   <p><img width=512 height=384
 src="rear_shocks_procedure_files/image033.jpg"><br>
-    Note: It"s best to have shock horizontal when uncompressing spring (floor pad
+    Note: It's best to have shock horizontal when uncompressing spring (floor pad
     or lap).<br>
     Push spring up shock piston rod, pressing spring tip into upper spring pad
     notch.<br>
