--- a/procedures/s54_vanos_solenoid_procedure.htm
+++ b/procedures/s54_vanos_solenoid_procedure.htm
@@ -51,9 +51,9 @@ div.WordSection1 {
   <p><b><span style='font-size:14.0pt'>Introduction</span></b><br>
     <br>
   </p>
-  <p>"Vanos" is BMW"s name for its variable valve timing units.
+  <p>"Vanos" is BMW's name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
-    (engine model). The vanos discussed here is BMW part # 11-36-7-838-161. It"s a
+    (engine model). The vanos discussed here is BMW part # 11-36-7-838-161. It's a
     double vanos, meaning both the intake and exhaust valve timing is varied. This
     vanos unit is part of BMW 6-cylinder engine S54. This engine is incorporated
     into the M3 E46 00-06, Z3 E36 M Roadster &amp; M Coup 00-02, Z4 E85 M3.2
