--- a/procedures/s62_vanos_procedure.htm
+++ b/procedures/s62_vanos_procedure.htm
@@ -1166,7 +1166,7 @@ src="s62_vanos_procedure_files/image167.jpg"></p>
   <p><img border=0 width=512 height=384
 src="s62_vanos_procedure_files/image168.jpg"><br>
     Mount bank 1 &amp; 2 vanos on engine head. Perform following for each vanos.<br>
-    Note: Vanos units are same and interchangeable, but it"s best practice to
+    Note: Vanos units are same and interchangeable, but it's best practice to
     maintain vanos to engine head association. Vanos is originally oriented with
     vanos sticker to bottom.<br>
     Mount vanos on engine head with vanos long supporting bolt at right and left side
