--- a/procedures/single_vanos_diaphragm_spring_procedure.htm
+++ b/procedures/single_vanos_diaphragm_spring_procedure.htm
@@ -60,7 +60,7 @@ span.CharChar
     is needed.<br>
     <br>
     Variable valve timing is the modifying of the engine valve opening/closing
-    timing dynamically. BMW"s variable valve timing implements a time shift (phase
+    timing dynamically. BMW's variable valve timing implements a time shift (phase
     shift) scheme. The camshaft cam is not modified, thus all the characteristics
     of the opening and closing of the valve remain the same. What changes is the
     time when the valve opening/closing occurs relative to the crankshaft timing.
@@ -78,7 +78,7 @@ span.CharChar
   </p>
   <p>[picture]<br>
     The camshaft and camshaft sprocket are not mounted directly to each other. The
-    sprocket has a hole at its middle that"s larger than the camshaft end. Opposing
+    sprocket has a hole at its middle that's larger than the camshaft end. Opposing
     slant helical gears are mounted at the sprocket hole and camshaft end. There is
     an independent splined shaft with a cup and helical gears on the inside and
     outside of the cup walls. The splined shaft cup inner helical gears match the
@@ -89,7 +89,7 @@ span.CharChar
     in/out of the camshaft and sprocket requires the rotation of a component due to
     the helical gears. The sprocket rotation is fixed by the timing chain. The
     splined shaft can"t rotate due to the opposing helical gear slants on its cup
-    inside and outside. Thus it"s the camshaft that rotates when the splined shaft
+    inside and outside. Thus it's the camshaft that rotates when the splined shaft
     is manipulated axially.<br>
     <br>
   </p>
@@ -169,8 +169,8 @@ src="single_vanos_diaphragm_spring_procedure_files/image001.jpg"><br>
     axially. This causes strong axial movements of the splined shaft. Any axial
     play in the splined shaft vicinity is engaged and can cause a rattle.<br>
     There are two locations of axial play. The helical gears themselves have axial
-    play that"s engaged and rattles and the vanos piston bearing has axial play
-    that"s engaged and rattles.<br>
+    play that's engaged and rattles and the vanos piston bearing has axial play
+    that's engaged and rattles.<br>
     <br>
     The splined shaft axial movements caused by the camshaft lashes are facilitated
     by the helical gear wear, but they are also enhanced by sprocket rotational
