--- a/procedures/single_vanos_rattle_procedure.htm
+++ b/procedures/single_vanos_rattle_procedure.htm
@@ -43,10 +43,10 @@ span.BalloonTextChar {
   <p><b><span style='font-size:14.0pt'>Introduction</span><br>
     <br>
     </b></p>
-  <p>"Vanos" is BMW"s name for its variable valve timing units.
+  <p>"Vanos" is BMW's name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
     (engine model). The vanos discussed here is BMW part # 11-36-1-748-036 (M50TU,
-    US S50) and 11-36-1-748-819 (M52, S52). It"s a single vanos, meaning only the
+    US S50) and 11-36-1-748-819 (M52, S52). It's a single vanos, meaning only the
     intake valve timing is varied. This vanos unit is part of BMW 6-cylinder
     engines M50TU, M52, US S50, S52. These engines were incorporated into a wide
     range of car models during years 1993-1999. They are found in the 3-series E36
@@ -63,7 +63,7 @@ span.BalloonTextChar {
     found on the helical gears and the vanos piston bearing. Replacing the helical
     gear components is expensive and the gears will wear again and the rattle will
     return. Removing the vanos piston bearing axial play significantly reduces the
-    rattle to the point where it"s barely heard or not heard at all in the
+    rattle to the point where it's barely heard or not heard at all in the
     passenger compartment. Performance cams like the cams on the M3 or aftermarket performance
     cams (Schrick/Sunbelt) create stronger camshaft lash forces and thus are more
     susceptible to causing a rattle.<br>
@@ -81,7 +81,7 @@ span.BalloonTextChar {
     of the BMW variable valve timing system is needed.<br>
     <br>
     Variable valve timing is the modifying of the engine valve opening/closing
-    timing dynamically. BMW"s variable valve timing implements a time shift (phase
+    timing dynamically. BMW's variable valve timing implements a time shift (phase
     shift) scheme. The camshaft cam is not modified, thus all the characteristics
     of the opening and closing of the valve remain the same. What changes is the
     time when the valve opening/closing occurs relative to the crankshaft timing. The
@@ -99,7 +99,7 @@ span.BalloonTextChar {
   </p>
   <p>[picture]<br>
     The camshaft and camshaft sprocket are not mounted directly to each other. The
-    sprocket has a hole at its middle that"s larger than the camshaft end. Opposing
+    sprocket has a hole at its middle that's larger than the camshaft end. Opposing
     slant helical gears are mounted at the sprocket hole and camshaft end. There is
     an independent splined shaft with a cup and helical gears on the inside and
     outside of the cup walls. The splined shaft cup inner helical gears match the
@@ -110,7 +110,7 @@ span.BalloonTextChar {
     in/out of the camshaft and sprocket requires the rotation of a component due to
     the helical gears. The sprocket rotation is fixed by the timing chain. The
     splined shaft can"t rotate due to the opposing helical gear slants on its cup
-    inside and outside. Thus it"s the camshaft that rotates when the splined shaft
+    inside and outside. Thus it's the camshaft that rotates when the splined shaft
     is manipulated axially.<br>
     <br>
   </p>
@@ -172,8 +172,8 @@ span.BalloonTextChar {
     axially. This causes strong axial movements of the splined shaft. Any axial
     play in the splined shaft vicinity is engaged and can cause a rattle.<br>
     There are two locations of axial play. The helical gears themselves have axial
-    play that"s engaged and rattles and the vanos piston bearing has axial play
-    that"s engaged and rattles.<br>
+    play that's engaged and rattles and the vanos piston bearing has axial play
+    that's engaged and rattles.<br>
     <br>
     Testing has been performed to assess and attempt to reduce the rattling. The
     vanos piston bearing radial play was modified and the results indicated little
@@ -216,12 +216,12 @@ span.BalloonTextChar {
     <br>
     Removing the bearing axial play requires modifying or replacing at least one
     bearing component. The thrust bearings are a standard part and are manufactured
-    to tight tolerances. It"s not feasible to modify or replace them. The ring and
+    to tight tolerances. It's not feasible to modify or replace them. The ring and
     center washer are non standard parts and are manufactured to loose tolerances. The
     ring height can be reduced or the center washer height can be increased to
     remove the bearing axial play. The ring has been found to have a large height
     variation and the washer has been found to have a smaller height variation. Due
-    to these findings, it"s more effective to replace the ring. A bearing
+    to these findings, it's more effective to replace the ring. A bearing
     adjustment can be made at installation to address any minor axial fit
     variation.<br>
     <br>
@@ -233,7 +233,7 @@ span.BalloonTextChar {
     ring is manufactured to the same specification as the original bearing ring but
     with a shorter height and a very tight height tolerance. The other ring
     dimensions are also manufactured to tight tolerances.<br>
-    The bearing ring is a difficult and expensive component to manufacture. It"s
+    The bearing ring is a difficult and expensive component to manufacture. It's
     made from a special bearing steel and hardened to a high hardness. All its
     surfaces are ground. This technique allows for machining hard parts to a high
     dimensional tolerance and a polished surface.<br>
