--- a/procedures/swing_arm_ball_joints_procedure.htm
+++ b/procedures/swing_arm_ball_joints_procedure.htm
@@ -93,7 +93,7 @@ src="swing_arm_ball_joints_procedure_files/image003.jpg"><br>
     o"clock inner shoulder, and the other hand on the wheel rim 6 o"clock outer lip.
     Engage your shoulder at the 12 o"clock end. Attempt to push in at the 6 o"clock
     position.<br>
-    Note: That"s my pastor friend from Syria, 70 years old. Loves working on the
+    Note: That's my pastor friend from Syria, 70 years old. Loves working on the
     car!<br>
     <br>
   </p>
@@ -107,8 +107,8 @@ src="swing_arm_ball_joints_procedure_files/image003.jpg"><br>
 src="swing_arm_ball_joints_procedure_files/image002.jpg"><br>
     If you find play, have a second person perform the above diagnosis procedure while
     you inspect the ball joint on the wheel inboard side. The ball joint is the
-    metal/rubber component that"s located at the bottom rear of the wheel carrier. If
-    you see one of the rubber boots move, that"s an indication of free space in the
+    metal/rubber component that's located at the bottom rear of the wheel carrier. If
+    you see one of the rubber boots move, that's an indication of free space in the
     ball joint and thus a faulty joint.<br>
     <br>
   </p>
@@ -222,7 +222,7 @@ src="swing_arm_ball_joints_procedure_files/image008.jpg"><br>
   </p>
   <p>The following procedure shows the left side (driver side).
     The right side is the same but with minor noted differences.<br>
-    It"s more effective to perform the left side first since it"s illustrated with
+    It's more effective to perform the left side first since it's illustrated with
     pictures.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image009.jpg"><br>
@@ -320,7 +320,7 @@ src="swing_arm_ball_joints_procedure_files/image019.jpg"><br>
     Note: This step is essential to the proper function and maintenance of the tool.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image020.jpg"><br>
-    Twist press tool small press cap onto ball joint rear end so that it"s flush
+    Twist press tool small press cap onto ball joint rear end so that it's flush
     with metal sleeve.<br>
     Arrange spindle with receive sleeve (notched cylinder) and plate (notched puck),
     and orient receive sleeve/plate notch to align with wheel carrier protrusion.
