--- a/procedures/thrust_arm_bushings_procedure.htm
+++ b/procedures/thrust_arm_bushings_procedure.htm
@@ -78,7 +78,7 @@ span.EmailStyle16
   <p><b><span style='font-size:14.0pt'>Configuration Background</span></b><br>
     <br>
   </p>
-  <p>Before discussing diagnoses, it"s helpful to have some understanding
+  <p>Before discussing diagnoses, it's helpful to have some understanding
     of the front suspension arm configuration.<br>
     <br>
   </p>
@@ -123,7 +123,7 @@ src="thrust_arm_bushings_procedure_files/image001.jpg"><br>
     <br>
   </p>
   <p>The control arm bushing has a similar structure to the
-    thrust arm bushing. It differs in that it"s built into the arm (one component),
+    thrust arm bushing. It differs in that it's built into the arm (one component),
     is fully rubber (not fluid filled), and is smaller in size. Like the thrust
     arm, it also acts as a shock absorber during wheel movements.<br>
     Over time and wear the bushing rubber dries, hardens, and then tears. This
@@ -226,7 +226,7 @@ src="thrust_arm_bushings_procedure_files/image001.jpg"><br>
   </p>
   <p>The thrust arm bushing can be replaced, but if the thrust
     arm ball joint is worn then both thrust arm and bushing should be replaced.
-    Thus it"s important to assess the state of the thrust arm ball joint before
+    Thus it's important to assess the state of the thrust arm ball joint before
     proceeding with a repair.<br>
     <br>
   </p>
@@ -326,7 +326,7 @@ src="thrust_arm_bushings_procedure_files/image001.jpg"><br>
 src="thrust_arm_bushings_procedure_files/image004.jpg"><br>
     <br>
   </p>
-  <p>BMW"s approach to replacing the thrust arm bushing is to,
+  <p>BMW's approach to replacing the thrust arm bushing is to,
     disconnect the thrust arm from the car, utilize a hydraulic press to press out
     the old bushing and press in the new bushing, and then remount the arm. The
     bushing joint is mounted to the frame with a bolt and nut and can be
@@ -376,9 +376,9 @@ src="thrust_arm_bushings_procedure_files/image005.jpg"><br>
     housing), its size and infrequent use make it impractical for the average
     DIYer. A local BMW dealership or indy shop could be hired to perform the press,
     but the logistics of accomplishing this in the middle of the repair are difficult
-    and precarious. In addition to the hydraulic press obstacle, there"s also the
+    and precarious. In addition to the hydraulic press obstacle, there's also the
     added complexity of removing the ball joint so the arm can be taken to the
-    hydraulic press. There"s also the cost of the BMW special tools.<br>
+    hydraulic press. There's also the cost of the BMW special tools.<br>
     <br>
   </p>
   <p><u>Complete Arm Replacement Technique</u><br>
@@ -398,9 +398,9 @@ src="thrust_arm_bushings_procedure_files/image005.jpg"><br>
   <p><u>At Car Bushing Repair Technique</u><br>
     <br>
   </p>
-  <p>If the repair is to only replace the bushings, then BMW"s technique
+  <p>If the repair is to only replace the bushings, then BMW's technique
     can be greatly simplified by avoiding two of its fundamental approaches. First,
-    to not disconnect the ball joint since it"s not directly related to the
+    to not disconnect the ball joint since it's not directly related to the
     problem. Second, to not utilize a hydraulic press, but to employ a smaller mobile
     press tool to perform the press at the car while the ball joint is still
     mounted.<br>
@@ -408,7 +408,7 @@ src="thrust_arm_bushings_procedure_files/image005.jpg"><br>
     bushing repairs. "The BMW tool sets for these cases employ a spindle (bolt)
     that runs through the bushing center shaft and facilitates a press cup and nut
     and receive cup to press in/out the bushing. This technique might not have been
-    utilized by BMW on the thrust arm bushing due to the bushing"s large size and
+    utilized by BMW on the thrust arm bushing due to the bushing's large size and
     proportionally narrow center shaft; i.e. too much force on a small spindle.<br>
     <br>
   </p>
@@ -425,7 +425,7 @@ src="thrust_arm_bushings_procedure_files/image005.jpg"><br>
   <p>Technic Tool Supply, Trailing Arm Set, part# BMW38-39 +
     Zinko 8 ton hydraulic hand pump, $285 + $375, is a kit that specifically addresses
     the E39 &amp; E38 thrust arm bushings. The E38 and E39 8-cyl utilize the same thrust
-    arm bushing. Unfortunately, the tool"s astronomical price makes it nonviable.<br>
+    arm bushing. Unfortunately, the tool's astronomical price makes it nonviable.<br>
     <br>
   </p>
   <p><u>Jaw Puller &amp; Pipe Cap Press Technique</u></p>
@@ -752,8 +752,8 @@ src="thrust_arm_bushings_procedure_files/image017.jpg"><br>
   </p>
   <p>The following procedure shows the left side (driver side).
     The right side is the same but with minor noted differences.</p>
-  <p>It"s more effective to perform the left side first since
-    it"s illustrated with pictures.<br>
+  <p>It's more effective to perform the left side first since
+    it's illustrated with pictures.<br>
     <br>
     <br>
   </p>
@@ -960,7 +960,7 @@ src="thrust_arm_bushings_procedure_files/image034.jpg"><br>
     Tighten puller bolt, allowing bushing to enter thrust arm bore. Again, orient
     bushing so marks on sleeve lines up with orientation ridge on thrust arm.
     Center press cap on bushing sleeve. Tighten puller bolt (5/8" socket 1/2" / 1/2"
-    ratchet). **Check and adjust puller jaw teeth. It"s essential they don"t
+    ratchet). **Check and adjust puller jaw teeth. It's essential they don"t
     protrude into bore opening. <br>
     <br>
   </p>
@@ -1009,7 +1009,7 @@ src="thrust_arm_bushings_procedure_files/image037.jpg"><br>
   </p>
   <p>Repeat above procedure for second side. Clean and re-grease
     puller bolt. Puller should be reused with little adjustment to jaws. Bushing
-    press flow goes from car inboard side to car outboard side. It"s the mirror
+    press flow goes from car inboard side to car outboard side. It's the mirror
     image of the 1st side setup.</p>
   <p><img width=512 height=384
 src="thrust_arm_bushings_procedure_files/image038.jpg"><br>
