--- a/procedures/vanos_procedure.htm
+++ b/procedures/vanos_procedure.htm
@@ -166,7 +166,7 @@ href="http://bimmer.roadfly.com/bmw/forums/e39/7494631-2.html">http://bimmer.roa
     <br>
   </p>
   <p>If the valve cover gaskets are over 40k miles (64k
-    kilometers) old, then it"s prudent to replace them during this repair. If they
+    kilometers) old, then it's prudent to replace them during this repair. If they
     are over 80k miles (128k kilometers) old, then it is a requirement to replace
     them during this repair, otherwise they might leak due to being dismounted and
     reused. These gaskets have an estimated lifespan of ~60k miles (96k kilometers)
@@ -233,7 +233,7 @@ src="vanos_procedure_files/image004.jpg"><br>
     <br>
     A Baum Tools water pump pulley holder or holder and 32mm wrench combo can be
     purchased from El Paso Tool store.<br>
-    Go to El Paso Tool store and perform a "Store search" for "115030". Check the
+    Go to El Paso Tool store and perform a "store search" for "115030". Check the
     "in titles &amp; description" check box.<br>
     <a href="http://stores.shop.ebay.com/EL-PASO-TOOL-EUROPEAN-AUTO-TOOLS">El Paso
     Tool store</a></p>
