--- a/procedures/vanos_single_procedure.htm
+++ b/procedures/vanos_single_procedure.htm
@@ -47,10 +47,10 @@ div.WordSection1 {
   <p><b><span style='font-size:14.0pt'>Introduction</span></b><br>
     <br>
   </p>
-  <p>"Vanos" is BMW"s name for its variable valve timing units.
+  <p>"Vanos" is BMW's name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
     (engine model). The vanos discussed here is BMW part # 11-36-1-748-036 (M50TU, US
-    S50) and 11-36-1-748-819 (M52, S52). It"s a single vanos, meaning only the intake
+    S50) and 11-36-1-748-819 (M52, S52). It's a single vanos, meaning only the intake
     valve timing is varied. This vanos unit is part of BMW 6-cylinder engines M50TU,
     M52, US S50, S52. These engines were incorporated into a wide range of car
     models during years 1993-1999. They are found in the 3-series E36 93-97, 5-series
@@ -87,7 +87,7 @@ href="http://bimmer.roadfly.com/bmw/forums/e39/7494631-2.html">http://bimmer.roa
   <p>The Buna O-ring can be replaced with an O-ring made from
     Viton. Viton (FKM, Fluorocarbon) has similar functional characteristics to
     Buna, but has much higher temperature and chemical resistance characteristics.
-    It"s also recommended for the automobile engine environment. The vanos Teflon
+    It's also recommended for the automobile engine environment. The vanos Teflon
     (PTFE filled) seal is not a standard part and needs to be semi-custom manufactured.<br>
     <br>
   </p>
@@ -154,7 +154,7 @@ href="http://bimmer.roadfly.com/bmw/forums/e39/8705552-2.html">http://bimmer.roa
     <br>
   </p>
   <p>If the valve cover gaskets are over 40k miles (64k
-    kilometers) old, then it"s prudent to replace them during this repair. If they
+    kilometers) old, then it's prudent to replace them during this repair. If they
     are over 80k miles (128k kilometers) old, then it is a requirement to replace
     them during this repair, otherwise they might leak due to being dismounted and
     reused. These gaskets have an estimate lifespan of ~60k miles (96k kilometers)
