--- a/procedures/s62_vanos_rattle_procedure.htm
+++ b/procedures/s62_vanos_rattle_procedure.htm
@@ -35,7 +35,7 @@ style='font-size:14.0pt'><br>
     </span></b></p>
   <p><b><span style='font-size:14.0pt'>Introduction</span><br>
     </b><br>
-    "Vanos" is BMW"s name for its variable valve timing units. Vanos units take on
+    "Vanos" is BMW name for its variable valve timing units. Vanos units take on
     various shapes and design according to car year and model (engine model). The
     vanos units discussed here are BMW part # 11-36-7-831-486 and 11-36-7-831-487. They
     are a double vanos, meaning both the intake and exhaust valve timing is varied.
@@ -53,11 +53,11 @@ style='font-size:14.0pt'><br>
     gears and the splined shaft bearing. Replacing the helical gear components is
     expensive and the gears will wear again and the rattle will return. Removing
     the splined shaft bearing axial play significantly reduces the rattle to the
-    point where it"s barely heard or not heard at all in the passenger compartment.
+    point where it barely heard or not heard at all in the passenger compartment.
     Performance cams like the ones on this engine create stronger camshaft lash
     forces and thus are more susceptible to causing a rattle.<br>
     <br>
-    Another component that addresses the rattle is the diaphragm spring that"s
+    Another component that addresses the rattle is the diaphragm spring that
     incorporated in the intake and exhaust sprockets. This spring loads the
     sprocket rotational movement to dampen the rattle quick movements.<br>
     Over time the diaphragm spring weakens and degrades in function. Replacing the
@@ -71,7 +71,7 @@ style='font-size:14.0pt'><br>
     introductions.<br>
     <br>
     The splined shaft bearing is made of a thick washer and two thrust (roller)
-    bearings. The washer incorporates a stud that"s mounted to the vanos piston.
+    bearings. The washer incorporates a stud that mounted to the vanos piston.
     The two thrust bearings sandwich the washer facilitating the splined shaft to
     rotate at camshaft speed without rotating the vanos piston. The washer and two
     thrust bearings are incased in a ring and two outer flat washers. The complete
@@ -80,15 +80,15 @@ style='font-size:14.0pt'><br>
     <br>
     Removing the splined shaft bearing axial play requires modifying or replacing one
     or more bearing components. The thrust bearings are a standard part and are
-    manufactured to tight tolerances. It"s not feasible to modify or replace them. The
+    manufactured to tight tolerances. It not feasible to modify or replace them. The
     center washer is also manufactured to a tight tolerance. The ring is a
-    non-standard part and is manufactured to loose tolerance. It"s also made of
+    non-standard part and is manufactured to loose tolerance. It also made of
     standard steel that is annealed (soft). This is causing it to be scored by the
     center washer and thrust bearing. The outer flat washers reside inside the ring
     and thus influence the bearing axial fit. The washers are a standard bearing
     part, but due to their stamped manufacturing have a notable tolerance range
     which can significantly affect the bearing axial fit.<br>
-    The ring can be replaced with a ring made of bearing steel that"s hardened and
+    The ring can be replaced with a ring made of bearing steel that hardened and
     ground to bearing standards. Its height can be tightly controlled to provide a
     tight bearing axial fit. Standard bearing washers that have been measured and
     sorted can be combined to provide the needed height to provide a tight bearing
@@ -1168,7 +1168,7 @@ src="s62_vanos_rattle_procedure_files/image154.jpg"></p>
   <p><img border=0 width=512 height=384
 src="s62_vanos_rattle_procedure_files/image155.jpg"><br>
     Install bank 1 vanos with splined shafts onto sprocket hubs.<br>
-    Note: Vanos units are same and interchangeable. But it"s best practice to
+    Note: Vanos units are same and interchangeable. But it's best practice to
     maintain vanos to engine head association. Vanos is originally oriented with
     vanos sticker to bottom.<br>
     Align and initially insert exhaust and then intake spline shafts into
@@ -1203,7 +1203,7 @@ src="s62_vanos_rattle_procedure_files/image158.jpg"></p>
   <p><img border=0 width=512 height=384
 src="s62_vanos_rattle_procedure_files/image159.jpg"><br>
     Install bank 2 vanos with splined shafts onto sprocket hubs.<br>
-    Note: Vanos units are same and interchangeable. But it"s best practice to
+    Note: Vanos units are same and interchangeable. But it's best practice to
     maintain vanos to engine head association. Vanos is originally oriented with
     vanos sticker to bottom.<br>
     Align and initially insert exhaust and then intake spline shafts into
