Added image directories

--- a/procedures/vanos_single_procedure.htm
+++ b/procedures/vanos_single_procedure.htm
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head>e36_fan_procedure_files
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - Single Vanos Procedure</title>
