--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
+  <meta name="google-site-verification" content="AygEeV18ufs-wsIonHczPs4d0ExeSTnb68JhejRu_D4" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
